# zitat

./: .gitignore  README.md  README.org  flake.nix  merge.py  pyproject.toml  requirements.txt  zitat.py
.github/workflows/: pythonpackage.yml
features/: kindle_file_to_org_file.feature  kindle_string_to_org_string.feature  kindle_to_org.feature  org_timestamps.feature
features/steps/: clipping_conversion.py  kindle_to_org_timestamp_conversion.py  timestamp_conversion.py
