[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyhamcrest = "^2.1.0"
orgparse = "^0.4.20231004"
behave = {git = "https://github.com/behave/behave", rev = "v1.2.7.dev5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
